--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pousser",
-  "version": "1.0.0",
-  "description": "Pousser http client for Node.js",
+  "version": "0.0.1",
+  "description": "Pousser realtime javascript library",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
