--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "pousser",
   "version": "0.0.1",
   "description": "Pousser realtime javascript library",
-  "main": "index.js",
+  "main": "dist/pousser.js",
+  "files": ["dist/**/*"],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "format": "prettier --write \"lib/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -23,5 +27,11 @@
   "bugs": {
     "url": "https://github.com/cloudoti/pousser-js/issues"
   },
-  "homepage": "https://github.com/cloudoti/pousser-js#readme"
+  "homepage": "https://github.com/cloudoti/pousser-js#readme",
+  "devDependencies": {
+    "prettier": "^2.2.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.2.2"
+  }
 }
