--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
+    "target": "ES5",
+    "module": "None",
     "declaration": true,
-    "outDir": "./dist",
-    "strict": true
+    "sourceMap": true,                        /* Generates corresponding '.map' file. */
+    "outFile": "dist/bundle.js", 
   },
   "include": ["lib"],
   "exclude": ["node_modules", "**/__tests__/*"]
